[#2] create base for cli

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-.DS_Store
-after_convert/
-before_convert/
-finished/
-tmp/
+/.bundle/
+/.yardoc
+/Gemfile.lock
+/_yardoc/
+/coverage/
+/doc/
+/pkg/
+/spec/reports/
+/tmp/
